created forms and table

--- a/index.html
+++ b/index.html
@@ -27,4 +27,4 @@ while they were in school.</p>
     <li>Spending most of my day sitting </li>
     <li>Limitations to denominations</li>
 </ul>
-<img src="./pic.jpeg" alt="">
+<img src="./pic.jpeg" alt="photo of ">
