--- a/Wambi.html
+++ b/Wambi.html
@@ -66,7 +66,7 @@
 
     
 
-    <p>Already have an account? <a id="link" href="#">Login</a></p>
+    <p>Already have an account? <a id="link" href="login.html">Login</a></p>
   
   </form>  
 </body>
